--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "p-limit": "^3.1.0",
+    "p-queue": "^6.6.2",
     "playwright": "^1.19.2",
     "puppeteer": "^13.4.0"
   }
